# Infrastruct_SBC

./: .gitignore  CMakeLists.txt  Makefile  ReadMe.txt
app/: CMakeLists.txt  main.cpp
configured/: config.hpp.in
src/my_lib/: CMakeLists.txt  my_lib.cpp  my_lib.h
